# KINDERGARTEN

./: Makefile  Makefile.am  Makefile.in  README.md  aide.txt  alerte.txt  camera.txt  classe.txt  config.h  config.status  configure  configure.in  enfant.txt  envoyer_maitresse.txt  envoyer_parent.txt  maitresse.txt  max.glade.bak  max.gladep.bak  medecin.txt  pannes.txt  parent.txt  state.txt  stock.txt  tech.txt
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  aide.c  aide.h  alerte.c  alerte.h  braclet.h  callbacks.c  callbacks.h  camera.c  camera.h  classe.c  classe.h  client.h  email.c  enfant.c  enfant.h  enum.h  envoyer_parent.c  envoyer_parent.h  interface.c  interface.c.bak  interface.h.bak  login.c  login.h  main.c  maitresse.c  maitresse.h  max  medecin.c  medecin.h  pannes.c  pannes.h  parent.c  parent.h  tech.c  tech.h
src/.deps/: aide.Po  alerte.Po  braclet.Po  callbacks.Po  camera.Po  classe.Po  enfant.Po  envoyer_parent.Po  identification.Po  login.Po  maitresse.Po  medecin.Po  pannes.Po  parent.Po  tech.Po  winsock.Po
